# learn-github-features

./: .gitignore  LICENSE  README.md  SECURITY.md  pom.xml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  re-fe-pipeline.yml
.github/workflows/: ci.yml  (+5 more)
ci-cd/: fabric.cmd
cl-esb-fus/: ReadMe.txt  api_guide.md  fus.wadl
docs/: index.html  re-fe-pipeline-architecture.md  style.css
tools/testgen/: QUICKSTART.md  README.md  config.yaml  pyproject.toml
tools/testgen/testgen/: __init__.py  cli.py  models.py
tools/testgen/testgen/behavioral/: __init__.py  legacy_scanner.py  payload_factory.py  re_parser.py  xsd_analyzer.py
tools/testgen/testgen/discovery/: __init__.py  classifier.py  regex_parser.py  scanner.py  serialiser.py
tools/testgen/testgen/execution/: __init__.py  maven_runner.py  pom_manager.py  preflight.py
tools/testgen/testgen/generation/: __init__.py  engine.py  incremental.py  plugins.py
tools/testgen/testgen/reporting/: __init__.py
tools/testgen/testgen/templates/behavioral/: business_rule.java.j2  error_handling.java.j2  field_mapping.java.j2
tools/testgen/testgen/templates/junit/: client.java.j2  exception.java.j2  exception_handler.java.j2  model.java.j2  processor.java.j2  rest_controller.java.j2  service.java.j2  soap_endpoint.java.j2
tools/testgen/testgen/templates/postman/: collection.json.j2  environment.json.j2
tools/testgen/testgen/templates/wiremock/: rest_integration.java.j2  soap_integration.java.j2
(+486 files in other folders)
