[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testgen-framework"
version = "2.1.0"
description = "Automated test generation for Spring Boot projects"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "click>=8.1",
]

[project.optional-dependencies]
ast = [
    "tree-sitter>=0.22",
    "tree-sitter-java>=0.23",
]

[project.scripts]
testgen = "testgen.cli:main"

[tool.setuptools.packages.find]
include = ["testgen*"]
